--- a/app/assets/stylesheets/oneui.css
+++ b/app/assets/stylesheets/oneui.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
 }
 body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #646464;
   background-color: #f5f5f5;
@@ -620,7 +620,7 @@ a.bg-white:focus {
   background-color: #e6e6e6;
 }
 .bg-white-op {
-  background-color: rgba(255, 255, 255, 0.075);
+  background-color: #C5B358;
 }
 .bg-crystal-op {
   background-color: rgba(255, 255, 255, 0.15);
@@ -6080,6 +6080,7 @@ fieldset[disabled] .form-material.floating > label {
   background-color: #fff;
   -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.01);
   box-shadow: 0 2px rgba(0, 0, 0, 0.01);
+  border-radius: 5px;
 }
 .block .block,
 .side-content .block {
@@ -6486,35 +6487,31 @@ a.block.block-link-hover3:active {
   font-size: 12px;
   font-weight: 600;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.3);
+  color: #333;
 }
 .nav-main a {
   display: block;
   padding: 10px 20px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #333;
+  font-weight: 500;
 }
 .nav-main a:hover,
 .nav-main a:focus {
-  color: rgba(255, 255, 255, 0.5);
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #fafafa;
+  color: #000;
 }
 .nav-main a:hover > i,
 .nav-main a:focus > i {
-  color: #fff;
-}
-.nav-main a.active,
-.nav-main a.active:hover {
-  color: #fff;
+  color: #C5B358;
 }
 .nav-main a.active > i,
 .nav-main a.active:hover > i {
-  color: #fff;
+  color: #C5B358;
 }
 .nav-main a > i {
   display: inline-block;
   min-width: 14px;
   margin-right: 15px;
-  color: rgba(255, 255, 255, 0.2);
 }
 .nav-main a.nav-submenu {
   position: relative;
@@ -6537,8 +6534,8 @@ a.block.block-link-hover3:active {
   padding: 0 0 0 50px;
   height: 0;
   list-style: none;
-  background-color: rgba(0, 0, 0, 0.15);
   overflow: hidden;
+  border-radius: 5px;
 }
 .nav-main ul > li {
   opacity: 0;
@@ -6556,12 +6553,15 @@ a.block.block-link-hover3:active {
 .nav-main ul a {
   padding: 8px 8px 8px 0;
   font-size: 13px;
-  color: rgba(255, 255, 255, 0.4);
+  color: #333;
+}
+.nav-main ul a:active {
+  background-color: #000;
+  color: #000
 }
 .nav-main ul a:hover,
 .nav-main ul a:focus {
-  color: #fff;
-  background-color: transparent;
+  background-color: #fafafa;
 }
 .nav-main ul a > i {
   margin-right: 10px;
@@ -6570,10 +6570,10 @@ a.block.block-link-hover3:active {
   padding-left: 12px;
 }
 .nav-main li.open > a.nav-submenu {
-  color: #fff;
+  color: #333;
 }
 .nav-main li.open > a.nav-submenu > i {
-  color: #fff;
+  color: #333;
 }
 .nav-main li.open > a.nav-submenu:before {
   content: "\f107";
