--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,26 +1,35 @@
-<%= form_for(event) do |f| %>
-  <% if event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+          <div class="block-content table-responsive">
+            <%= form_for(event) do |f| %>
+              <% if event.errors.any? %>
+                <div id="error_explanation">
+                  <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
-      <ul>
-      <% event.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+                  <ul>
+                  <% event.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                  </ul>
+                </div>
+              <% end %>
 
-  <div class="field">
-    <%= f.label :Title %>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :Date %>
-    <%= f.date_field :date %>
-  </div>
+              <div class="field">
+                <%= f.label :Title %>
+                <%= f.text_field :title %>
+              </div>
+              <div class="field">
+                <%= f.label :Date %>
+                <%= f.date_field :date %>
+              </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+              <div class="actions">
+                <%= f.submit %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+    </div> 
+</div>
