--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -1,42 +1,51 @@
-<%= form_for(guest) do |f| %>
-  <% if guest.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(guest.errors.count, "error") %> prohibited this guest from being saved:</h2>
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+          <div class="block-content table-responsive">
+            <%= form_for(guest) do |f| %>
+              <% if guest.errors.any? %>
+                <div id="error_explanation">
+                  <h2><%= pluralize(guest.errors.count, "error") %> prohibited this guest from being saved:</h2>
 
-      <ul>
-      <% guest.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+                  <ul>
+                  <% guest.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                  </ul>
+                </div>
+              <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
+              <div class="field">
+                <%= f.label :first_name %>
+                <%= f.text_field :first_name %>
+              </div>
 
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
+              <div class="field">
+                <%= f.label :last_name %>
+                <%= f.text_field :last_name %>
+              </div>
 
-  <div class="field">
-    <%= f.label :gender %>
-    <%= f.text_field :gender %>
-  </div>
+              <div class="field">
+                <%= f.label :gender %>
+                <%= f.text_field :gender %>
+              </div>
 
-  <div class="col-sm-10">
-    <%= f.label :guestlist %>
-    <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
-  </div>
+              <div class="col-sm-10">
+                <%= f.label :guestlist %>
+                <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
+              </div>
 
-  <div class="col-sm-10">
-    <%= f.label :ambassador %>
-    <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
-  </div>
+              <div class="col-sm-10">
+                <%= f.label :ambassador %>
+                <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
+              </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+              <div class="actions">
+                <%= f.submit %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+    </div> 
+</div>
