--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -7,7 +7,7 @@
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
-                Exclusive Guestlist
+                All Guests
             </h1>
         </div>
         <div class="col-sm-5 text-right hidden-xs">
@@ -25,16 +25,6 @@
     <!-- Dynamic Table Simple -->
     <div class="block">
         <div class="block-header">
-            <ul class="block-options">
-                <li>
-                    <button type="button" data-toggle="block-option" data-action="fullscreen_toggle"><i class="si si-size-fullscreen"></i></button>
-                </li>
-                <li>
-                    <button type="button" data-toggle="block-option" data-action="content_toggle"><i class="si si-arrow-up"></i></button>
-                </li>
-            </ul>
-            <h3 class="block-title">Guestlist</h3>
-        </div>
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
                 
@@ -42,7 +32,7 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First name</th>
+                    <th>First name</td>
                     <th>Last name</th>
                     <th>Gender</th>
                     <th>Guestlists</th>
@@ -56,7 +46,7 @@
                       <td><%= guest.first_name %></td>
                       <td><%= guest.last_name %></td>
                       <td><%= guest.gender %></td>
-                      <td>+<%= @guestlist %></td>
+                      <td><%= link_to guest.guestlist.id, guestlists_path(guest.guestlist.id) %></td>
                     </tr>
                   <% end %>
                 </tbody>
