--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                     <!-- Sidebar Content -->
                     <div class="sidebar-content">
                         <!-- Side Header -->
-                        <div class="side-header side-content bg-white-op" style="background-image: url('<%= asset_path 'crown gold.png' %>');background-repeat: no-repeat;">
+                        <div class="side-header side-content bg-white-op" style="background-image: url('<%= asset_path 'crown white.png' %>');background-repeat: no-repeat;">
                             <button class="btn btn-link text-gray pull-right hidden-md hidden-lg" type="button" data-toggle="layout" data-action="sidebar_close">
                                 <i class="fa fa-times"></i>
                             </button>                          
@@ -47,10 +47,9 @@
                             <ul class="nav-main">
                                 <li>
                                     <%= link_to dashboards_path do %>
-                                        <i class="si si-speedometer"></i><span class="sidebar-mini-hide">Dashboard</span>
+                                        <i class="si si-speedometer"></i><span class="sidebar-mini-hide">DASHBOARD</span>
                                     <% end %>
                                 </li>
-                                <li class="nav-main-heading"><span class="sidebar-mini-hide">Event Area</span></li>
                                 <li>
                                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-users"></i><span class="sidebar-mini-hide">EVENTS</span></a>
                                     <ul>
@@ -63,7 +62,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-basket"></i><span class="sidebar-mini-hide">Guestlists</span></a>
+                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-basket"></i><span class="sidebar-mini-hide">GUESTLISTS</span></a>
                                     <ul>
                                         <li>
                                             <%= link_to 'Add Guestlist', new_guestlist_path %>
@@ -73,7 +72,6 @@
                                         </li>                                        
                                     </ul>
                                 </li>  
-                                <li class="nav-main-heading"><span class="sidebar-mini-hide">Guests Area</span></li>
                                 <li>
                                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-user-female"></i><span class="sidebar-mini-hide">GUESTS</span></a>
                                     <ul>
@@ -289,7 +287,7 @@
                 <div class="page-brand-info">
                     <div class="brand">
                         <a class="h2" href="">
-                            <%= image_tag 'crown gold.png' %><span class="m-title">NIGHTCLUB</span>
+                            <%= image_tag 'crown white.png' %><a font-color="#fff">NIGHTCLUB</a>
                         </a>
                     </div>
                     <p class="font-size-20 dtext">Get More Guests Through The Door With Messenger</p>
@@ -303,7 +301,7 @@
                 <div class="page-login-main">
                     <div class="brand visible-xs">
                         <a class="h3 text-white" href="index.html">
-                            <%= image_tag 'crown gold.png' %><span class="m-title">Messenger Chatbots</span>
+                            <%= image_tag 'crown white.png' %><span class="m-title">Messenger Chatbots</span>
                         </a>
                     </div>
 
@@ -324,7 +322,7 @@
                     <%= yield %>
 
                     <footer class="page-copyright">
-                        <p>BY <a class="font-w600" href="http://facebook.com/inzamul36" target="_blank"> JONAS PREISLER</a></p>
+                        <p>BY <a class="font-w600" href="http://facebook.com/digitalspartanpage" target="_blank"> JONAS PREISLER</a></p>
                         <p>© <span><%= Time.current.year %></span>. All RIGHT RESERVED.</p>
                     </footer>
                 </div>
