--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
                                             <%= link_to 'Add Ambassador', new_ambassador_path %>
                                         </li>
                                         <li>
-                                            <%= link_to 'All Ambassador', ambassadors_path %>
+                                            <%= link_to 'All Ambassadors', ambassadors_path %>
                                         </li>                                        
                                     </ul>
                                 </li> 
