--- a/app/assets/stylesheets/oneui.css
+++ b/app/assets/stylesheets/oneui.css
@@ -785,6 +785,7 @@ fieldset[disabled] .btn-default.active {
   color: #fff;
   background-color: #5c90d2;
   border-color: #3675c5;
+  border-radius: 5px;
 }
 .btn-primary:focus,
 .btn-primary.focus,
@@ -5619,10 +5620,10 @@ fieldset[disabled] .form-material.floating > label {
   cursor: not-allowed;
 }
 .form-material > .form-control {
-  padding-left: 0;
+  padding-left: 10;
   padding-right: 0;
   border: 0;
-  border-radius: 0;
+  border-radius: 10;
   background-color: transparent;
   -webkit-box-shadow: 0 1px 0 #e6e6e6;
   box-shadow: 0 1px 0 #e6e6e6;
@@ -6081,6 +6082,7 @@ fieldset[disabled] .form-material.floating > label {
   -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.01);
   box-shadow: 0 2px rgba(0, 0, 0, 0.01);
   border-radius: 5px;
+  box-shadow: 0px 0px 7px 0px #c8c8c8;
 }
 .block .block,
 .side-content .block {
