--- a/app/views/ambassadors/_form.html.erb
+++ b/app/views/ambassadors/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="block">
         <div class="block-header">
           <div class="block-content table-responsive">
-            <%= form_for(ambassador) do |f| %>
+            <%= simple_form_for(ambassador, html: { class: 'form-horizontal' }) do |f| %>
               <% if ambassador.errors.any? %>
                 <div id="error_explanation">
                   <h2><%= pluralize(ambassador.errors.count, "error") %> prohibited this ambassador from being saved:</h2>
@@ -17,12 +17,11 @@
               <% end %>
 
               <div class="field">
-                <%= f.label :name %>
-                <%= f.text_field :name %>
+                <%= f.input :name, placeholder: 'Name' %>
               </div>
 
               <div class="actions">
-                <%= f.submit %>
+                <%= f.button :submit %>
               </div>
             <% end %>
           </div>
