--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -1,27 +1,55 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Promoters</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<!-- Page Header -->
+<div class="content">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                Ambassadors
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li>Dashboard</li>
+                <li><a class="link-effect" href="">Ambassadors</a></li>
+            </ol>
+        </div>
+    </div>
+</div>
+<!-- END Page Header -->
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+                
 
-  <tbody>
-    <% @ambassadors.each do |ambassador| %>
-      <tr>
-        <td><%= ambassador.name %></td>
-        <td><%= link_to 'Show', ambassador %></td>
-        <td><%= link_to 'Edit', edit_ambassador_path(ambassador) %></td>
-        <td><%= link_to 'Destroy', ambassador, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+              <table>
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
 
-<br>
+                <tbody>
+                  <% @ambassadors.each do |ambassador| %>
+                    <tr>
+                      <td><%= ambassador.name %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
 
-<%= link_to 'New Promoter', new_ambassador_path %>
+              <br>
+
+              <%= link_to 'New Ambassador', new_ambassador_path, class: "btn btn-xl btn-default" %>
+            </table>
+        </div>
+    </div> 
+</div>
+<!-- END Page Content -->
+
+
