--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,9 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-
-
-<!-- Page Header -->
-<div class="content bg-gray-lighter">
+<div class="content ">
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
