--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -1,4 +1,20 @@
 <p id="notice"><%= notice %></p>
+<div class="content bg-gray-lighter">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                <td><%= @guestlist.event.title %></td>
+                <td><%= @guestlist.event.date %></td>
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li>Dashboard</li>
+                <li><a class="link-effect" href="">Guest</a></li>
+            </ol>
+        </div>
+    </div>
+</div>
 
 <div class="content">
     <!-- Dynamic Table Simple -->
@@ -25,7 +41,7 @@
                       <td><%= guests.first_name %></td>
                       <td><%= guests.last_name %></td>
                       <td><%= guests.gender %></td>
-                      <td><%= guests.ambassador.name %></td>
+                      <td><%= guests.ambassador.name if guests.ambassador %></td>
                     </tr>
                   <% end %>
                 </tbody>
