--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -16,6 +16,7 @@
             </ol>
         </div>
     </div>
+<%= link_to 'New Ambassador', new_ambassador_path, class: "btn btn-xl btn-default button-new" %>
 </div>
 <!-- END Page Header -->
 <div class="content">
@@ -42,14 +43,7 @@
                   <% end %>
                 </tbody>
               </table>
-
-              <br>
-
-              <%= link_to 'New Ambassador', new_ambassador_path, class: "btn btn-xl btn-default" %>
             </table>
         </div>
     </div> 
 </div>
-<!-- END Page Content -->
-
-
