--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -13,6 +13,7 @@
             </ol>
         </div>
     </div>
+<%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new" %>
 </div>
 
 <!-- Page Content -->
@@ -44,13 +45,7 @@
                   <% end %>
                 </tbody>
               </table>
-
-              <br>
-
-              <%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default" %>
             </table>
         </div>
     </div> 
 </div>
-<!-- END Page Content -->
-
