--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,24 +51,19 @@
                                     <% end %>
                                 </li>
                                 <li>
-                                    <%= link_to events_path do %>
-                                        <i class="si si-users"></i>EVENTS
-                                    <% end %>
-                                </li>
-                                <li>
                                     <%= link_to guestlists_path do %>
-                                        <i class="si si-basket"></i>
-                                        GUESTLISTS
+                                        <i class="si si-calendar"></i>
+                                        EVENTS
                                     <% end %>
                                 </li>  
                                 <li>
                                     <%= link_to guests_path do %>
-                                        <i class="si si-user-female"></i>GUESTS
+                                        <i class="si si-users"></i>GUESTS
                                     <% end %>
                                 </li>   
                                 <li>
                                     <%= link_to ambassadors_path do %>
-                                        <i class="si si-wallet"></i>AMBASSADORS
+                                        <i class="si si-user"></i>AMBASSADORS
                                     <% end %>
                                 </li> 
                                 <li class="nav-main-heading"><span class="sidebar-mini-hide">Settings Area</span></li>   
