--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="content bg-gray-lighter">
+<div class="content">
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
