--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,7 +25,7 @@
               </div>
               <br>
               <div class="actions">
-                <%= f.button :submit %>
+                <%= f.button :submit, class: "button-new"  %>
               </div>
             <% end %>
           </div>
