--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -13,7 +13,8 @@
             </ol>
         </div>
     </div>
-<%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new" %>
+  <%= link_to 'New Event', new_event_path, class: "btn btn-xl btn-default button-new" %>
+  <%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new-2" %>
 </div>
 
 <!-- Page Content -->
