--- a/app/views/ambassadors/_form.html.erb
+++ b/app/views/ambassadors/_form.html.erb
@@ -21,7 +21,7 @@
               </div>
 
               <div class="actions">
-                <%= f.button :submit %>
+                <%= f.button :submit, class: "button-new" %>
               </div>
             <% end %>
           </div>
