--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -40,7 +40,7 @@
               </div>
 
               <div class="actions">
-                <%= f.button :submit %>
+                <%= f.button :submit, class: "button-new" %>
               </div>
             <% end %>
           </div>
