--- a/app/assets/stylesheets/oneui.css
+++ b/app/assets/stylesheets/oneui.css
@@ -620,7 +620,7 @@ a.bg-white:focus {
   background-color: #e6e6e6;
 }
 .bg-white-op {
-  background-color: #C5B358;
+  background-color: #fff;
 }
 .bg-crystal-op {
   background-color: rgba(255, 255, 255, 0.15);
