--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,11 @@
                     <!-- Sidebar Content -->
                     <div class="sidebar-content">
                         <!-- Side Header -->
-                        <div class="side-header side-content bg-white-op" style="background-image: url('<%= asset_path 'crown white.png' %>');background-repeat: no-repeat;">
+                        <div class="side-header side-content bg-white-op" style="background-repeat: no-repeat;">
                             <button class="btn btn-link text-gray pull-right hidden-md hidden-lg" type="button" data-toggle="layout" data-action="sidebar_close">
                                 <i class="fa fa-times"></i>
                             </button>                          
-                            <a class="h5 text-white" href=""><span class="h4 font-w600 sidebar-mini-hide text-primary" style="margin-left: 40px">NIGHTCLUB</span>
+                            <%= image_tag 'crown white.png' %>
                             </a>
                         </div>
                         <!-- END Side Header -->
