--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -31,7 +31,7 @@
 
               <div class="col-sm-10">
                 <label class="control-label">Guestlist:</label>
-                <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
+                <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.event.title,m.id]}, {}, placeholder: "Select guestlist", class: "form-control" %>
               </div>
 
               <div class="col-sm-10">
