--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -227,10 +227,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title><%= yield(:title) %> | NIGHTCLUB CHATBOT</title>
+        <title><%= yield(:title) %> | ExclusiveAI</title>
 
-        <meta name="description" content="Tailor Management System">
-        <meta name="author" content="MD INZAMUL HAQUE">
+        <meta name="description" content="NIGHTCLUB MESSENGER MARKETING">
+        <meta name="author" content="JONAS PREISLER">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <!-- Page JS Plugins CSS -->
@@ -258,9 +258,7 @@
             <div class="page-content">
                 <div class="page-brand-info">
                     <div class="brand">
-                        <a class="h2" href="">
-                            <%= image_tag 'crown white.png' %><a font-color="#fff">NIGHTCLUB</a>
-                        </a>
+                        <%= image_tag 'crown white.png' %>
                     </div>
                     <p class="font-size-20 dtext">Get More Guests Through The Door With Messenger</p>
                     
