--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -39,6 +39,11 @@
                 <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
               </div>
 
+              <div class="col-sm-10">
+                <label class="control-label">Girl:</label>
+                <%= f.select :name, Girl.all.map{ |m| [m.name]}, {}, placeholder: "Select girl", class: "form-control" %>
+              </div>
+
               <div class="actions">
                 <%= f.button :submit, class: "button-new" %>
               </div>
