--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -41,7 +41,7 @@
 
               <div class="col-sm-10">
                 <label class="control-label">Girl:</label>
-                <%= f.select :name, Girl.all.map{ |m| [m.name]}, {}, placeholder: "Select girl", class: "form-control" %>
+                <%= f.select :girl_name, Girl.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select girl", class: "form-control" %>
               </div>
 
               <div class="actions">
