--- a/app/views/ambassadors copy/index.html.erb
+++ b/app/views/ambassadors copy/index.html.erb
@@ -1,21 +1,24 @@
 <p id="notice"><%= notice %></p>
+
+
+<!-- Page Header -->
 <div class="content">
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
-                <td><%= @guestlist.event.title %></td>
-                <td><%= @guestlist.event.date %></td>
+                Ambassadors
             </h1>
         </div>
         <div class="col-sm-5 text-right hidden-xs">
             <ol class="breadcrumb push-10-t">
                 <li>Dashboard</li>
-                <li><a class="link-effect" href="">Guest</a></li>
+                <li><a class="link-effect" href="">Ambassadors</a></li>
             </ol>
         </div>
     </div>
+<%= link_to 'New Ambassador', new_ambassador_path, class: "btn btn-xl btn-default button-new" %>
 </div>
-
+<!-- END Page Header -->
 <div class="content">
     <!-- Dynamic Table Simple -->
     <div class="block">
@@ -27,30 +30,20 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First name</th>
-                    <th>Last name</th>
-                    <th>Gender</th>
-                    <th>Ambassador</th>
+                    <th>Name</th>
                     <th colspan="3"></th>
                   </tr>
                 </thead>
 
                 <tbody>
-                  <% @guests.each do |guests| %>
+                  <% @ambassadors.each do |ambassador| %>
                     <tr>
-                      <td><%= guests.first_name %></td>
-                      <td><%= guests.last_name %></td>
-                      <td><%= guests.gender %></td>
-                      <td><%= guests.ambassador_name if guests.ambassador_name %></td>
+                      <td><%= ambassador.name %></td>
                     </tr>
                   <% end %>
                 </tbody>
               </table>
-
-              <br>
-
             </table>
         </div>
     </div> 
 </div>
-
