--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -36,7 +36,7 @@
 
               <div class="col-sm-10">
                 <label class="control-label">Ambassador:</label>
-                <%= f.select :ambassador_id, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
+                <%= f.select :ambassador_name, Ambassador.all.map{ |m| [m.name,m.id]}, {}, placeholder: "Select ambassador", class: "form-control" %>
               </div>
 
               <div class="actions">
