--- a/app/views/ambassadors/_form.html.erb
+++ b/app/views/ambassadors/_form.html.erb
@@ -17,7 +17,7 @@
               <% end %>
 
               <div class="field">
-                <%= f.input :name, placeholder: 'Name' %>
+                <%= f.input :name, placeholder: 'Name', as: :string %>
               </div>
 
               <div class="actions">
