error messages try3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                             <button class="btn btn-link text-gray pull-right hidden-md hidden-lg" type="button" data-toggle="layout" data-action="sidebar_close">
                                 <i class="fa fa-times"></i>
                             </button>                          
-                            <%= image_tag 'crown white.png' %>
+                            <%= image_tag 'logo.png' %>
                             </a>
                         </div>
                         <!-- END Side Header -->
@@ -258,7 +258,7 @@
             <div class="page-content">
                 <div class="page-brand-info">
                     <div class="brand">
-                        <%= image_tag 'crown white.png' %>
+                        <%= image_tag 'logo.png' %>
                     </div>
                     <p class="font-size-20 dtext">Get More Guests Through The Door With Messenger</p>
                     
@@ -271,7 +271,7 @@
                 <div class="page-login-main">
                     <div class="brand visible-xs">
                         <a class="h3 text-white" href="index.html">
-                            <%= image_tag 'crown white.png' %><span class="m-title">Messenger Chatbots</span>
+                            <%= image_tag 'logo.png' %><span class="m-title">Messenger Chatbots</span>
                         </a>
                     </div>
 
