--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,11 @@
                                         <i class="si si-user"></i>AMBASSADORS
                                     <% end %>
                                 </li> 
+                                <li>
+                                    <%= link_to tables_path do %>
+                                        <i class="si si-user"></i>TABLES
+                                    <% end %>
+                                </li> 
                                 <li class="nav-main-heading"><span class="sidebar-mini-hide">Settings Area</span></li>   
                                 <li>
                                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-settings"></i><span class="sidebar-mini-hide">PROFILE</span></a>
