--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -19,5 +19,11 @@
   <%= @table.guest %>
 </p>
 
+<p>
+  <strong>Guestlist:</strong>
+  <%= @table.guestlist_id %>
+</p>
+
+
 <%= link_to 'Edit', edit_table_path(@table) %> |
 <%= link_to 'Back', tables_path %>
