--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -30,6 +30,7 @@
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Gender</th>
+                    <th>Table</th>
                     <th colspan="3"></th>
                   </tr>
                 </thead>
@@ -40,6 +41,7 @@
                       <td><%= guests.first_name %></td>
                       <td><%= guests.last_name %></td>
                       <td><%= guests.gender %></td>
+                      <td><%= guests.table_id if guests.table_id %></td>
                     </tr>
                   <% end %>
                 </tbody>
