--- a/app/views/tables/_form.html.erb
+++ b/app/views/tables/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :number %>
+    <%= f.input :table_number %>
     <%= f.input :guest %>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
