--- a/app/views/tables/_form.html.erb
+++ b/app/views/tables/_form.html.erb
@@ -6,7 +6,7 @@
 
     <div class="col-sm-10">
       <label class="control-label">Table:</label>
-      <%= f.select :table_id, Table.all.map{ |m| [m.id]}, {}, placeholder: "Select Table", class: "form-control" %>
+      <%= f.select :table, Table.all.map{ |m| [m.id]}, {}, placeholder: "Select Table", class: "form-control" %>
     </div>
 
 
