--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Number</th>
-      <th>Guest</th>
+      <th>ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +13,7 @@
   <tbody>
     <% @tables.each do |table| %>
       <tr>
-        <td><%= table.number %></td>
-        <td><%= table.guest %></td>
+        <td><%= table.id %></td>
         <td><%= link_to 'Show', table %></td>
         <td><%= link_to 'Edit', edit_table_path(table) %></td>
         <td><%= link_to 'Destroy', table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
