--- a/app/views/tablebookings/show.html.erb
+++ b/app/views/tablebookings/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
-                <td><%= @tablebooking.event.title %></td>
+                <td>Event title</td>
             </h1>
         </div>
         <div class="col-sm-5 text-right hidden-xs">
