--- a/app/views/tablebookings/_form.html.erb
+++ b/app/views/tablebookings/_form.html.erb
@@ -2,13 +2,13 @@
   <%= f.error_notification %>
 
 
-              <div class="field">
-                <%= f.input :first_name, placeholder: "First Name" %>
-              </div>
+    <div class="field">
+      <%= f.input :first_name, placeholder: "First Name" %>
+    </div>
 
-              <div class="field">
-                <%= f.input :last_name, placeholder: "Last Name" %>
-              </div>
+    <div class="field">
+      <%= f.input :last_name, placeholder: "Last Name" %>
+    </div>
 
 
     <div class="col-sm-10">
@@ -17,8 +17,8 @@
     </div>
 
     <div class="col-sm-10">
-      <label class="control-label">Guestlist:</label>
-      <%= f.select :guestlist_id, Guestlist.all.map{ |m| [m.event.title,m.id]}, {}, placeholder: "Select Table", class: "form-control" %>
+      <label class="control-label">Event:</label>
+      <%= f.select :event_id,  Event.all.map{ |m| [m.title,m.id]}, {}, placeholder: "Select event", class: "form-control" %>
     </div>
 
   <div class="form-actions">
