--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class="col-sm-5 text-right hidden-xs">
             <ol class="breadcrumb push-10-t">
-                <li>Dashboard</li>
+                <li><%= link_to 'Dashboard', root_path %></li>
                 <li><a class="link-effect" href="">Events</a></li>
             </ol>
         </div>
