--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                         <div class="side-content">
                             <ul class="nav-main">
                                 <li>
-                                    <%= link_to dashboards_path do %>
+                                    <%= link_to dashboard_index_path do %>
                                         <i class="si si-speedometer"></i>DASHBOARD
                                     <% end %>
                                 </li>
@@ -66,6 +66,12 @@
                                         <i class="si si-user"></i>AMBASSADORS
                                     <% end %>
                                 </li> 
+                                <li>
+                                    <%= link_to tablebookings_path do %>
+                                        <i class="si si-user"></i>TABLEBOOKINGS
+                                    <% end %>
+                                </li> 
+
                                 <li>
                                     <%= link_to tables_path do %>
                                         <i class="si si-user"></i>TABLES
