--- a/app/views/tablebookings/show.html.erb
+++ b/app/views/tablebookings/show.html.erb
@@ -15,6 +15,6 @@
   <%= @tablebooking.table_id %>
 </p>
 <p>
-  <strong>Guestlist ID:</strong>
-  <%= link_to @tablebooking.event.title, event_path(@event) %>
+  <strong>Event:</strong>
+  <%= @tablebooking.event.title %>
 </p>
