--- a/app/views/tablebookings/index.html.erb
+++ b/app/views/tablebookings/index.html.erb
@@ -1,25 +1,54 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tablebookings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="content">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                Tablebookings
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li><%= link_to 'Dashboard', root_path %></li>
+                <li><a class="link-effect" href="">Tablebookings</a></li>
+            </ol>
+        </div>
+    </div>
+  <%= link_to 'New Tablebooking', new_tablebooking_path, class: "btn btn-xl btn-default button-new" %>
+</div>
+<!-- END Page Header -->
+<!-- Page Content -->
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Event</th>
+                    <th>Table number</th>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
 
-  <tbody>
-    <% @tablebookings.each do |tablebooking| %>
-      <tr>
-        <td><%= link_to 'Show', tablebooking %></td>
-        <td><%= link_to 'Edit', edit_tablebooking_path(tablebooking) %></td>
-        <td><%= link_to 'Destroy', tablebooking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Tablebooking', new_tablebooking_path %>
+                <tbody>
+                  <% @tablebookings.each do |tablebooking| %>
+                    <tr>
+                      <td><%= link_to tablebooking.event.title %></td>
+                      <td><%= tablebooking.table_id %></td>
+                      <td><%= tablebooking.first_name %></td>
+                      <td><%= tablebooking.last_name %></td>
+                      <td><%= link_to 'View', tablebooking_path(tablebooking.id), :class=>'btn btn-xs btn-default' %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </table>
+        </div>
+    </div> 
+</div>
