--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -1,27 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tables</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="content">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                Tables
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li><%= link_to 'Dashboard', root_path %></li>
+                <li><a class="link-effect" href="">Tables</a></li>
+            </ol>
+        </div>
+    </div>
+  <%= link_to 'New Table', new_table_path, class: "btn btn-xl btn-default button-new" %>
+</div>
+<!-- END Page Header -->
+<!-- Page Content -->
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+              <table>
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
 
-  <tbody>
-    <% @tables.each do |table| %>
-      <tr>
-        <td><%= table.id %></td>
-        <td><%= link_to 'Show', table %></td>
-        <td><%= link_to 'Edit', edit_table_path(table) %></td>
-        <td><%= link_to 'Destroy', table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Table', new_table_path %>
+                <tbody>
+                  <% @tables.each do |table| %>
+                    <tr>
+                      <td><%= table.id %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </table>
+        </div>
+    </div> 
+</div>
